# Whisper

./: app.py  formatted_transcription.txt  pyproject.toml  requirements.txt
