[tool.poetry]
name = "whisper"
version = "0.1.0"
description = ""
authors = ["ShawnKBeck <48632060+ShawnKBeck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
openai = "^0.27.8"
nltk = "^3.8.1"
moviepy = "^1.0.3"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
